Add registration, login, logout (WIP)
TODO:
- password hashing
- delete current session when logging
in with another account
- see OWASP recommendations...
